--- a/epitecture/epitecture/epitecture.csproj
+++ b/epitecture/epitecture/epitecture.csproj
@@ -131,6 +131,12 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Flurl">
+      <Version>2.6.0</Version>
+    </PackageReference>
+    <PackageReference Include="Flurl.Http">
+      <Version>2.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Imgur.API">
       <Version>4.0.1</Version>
     </PackageReference>
